Home page - fix centering / alignment issues

--- a/src/component/AboutPage/style.css
+++ b/src/component/AboutPage/style.css
@@ -50,8 +50,8 @@ p {
 }
 
 .logo {
-    max-width: 75%;
-    max-height: 75%;
+    width: 100%;
+    height: auto;
 }
 
 
