--- a/src/component/LandingPageV2/style.css
+++ b/src/component/LandingPageV2/style.css
@@ -45,8 +45,8 @@ p {
 }
 
 .logo {
-  max-width: 75%;
-  max-height: 75%;
+  max-width: 80%;
+  height: auto;
 }
 
 .fit-content {
